src/objects/EventApi__Ticket_Schedule_Item__c.object
<CustomObject>
    <description>Junction object to configure Schedule Items and link them to ticket types.</description>
    <fields>
        <fullName>EventApi__Disable_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</description>
        <inlineHelpText>When checked, attendees cannot register for this schedule item. Useful for breaks, meals, and other schedule items that are not sessions.</inlineHelpText>
        <label>Disable Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Hide_During_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field removes this session from the registration&apos;s agenda page.</description>
        <inlineHelpText>Checking this field removes this session from the registration&apos;s agenda page.</inlineHelpText>
        <label>Hide During Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Required_for_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field automatically includes this session for purchase during registration.</description>
        <inlineHelpText>Checking this field automatically includes this session for purchase during registration.</inlineHelpText>
        <label>Required for Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <description>This field relates the Ticket Type Scheduled Item to the Scheduled Item.</description>
        <inlineHelpText>This field relates the Ticket Type Scheduled Item to the Scheduled Item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Ticket Type Schedule Items</relationshipLabel>
        <relationshipName>Ticket_Type_Schedule_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <description>This field relates the Ticket Type Scheduled Item to the Ticket Type.</description>
        <inlineHelpText>This field relates the Ticket Type Scheduled Item to the Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Ticket Type Schedule Items</relationshipLabel>
        <relationshipName>Ticket_Type_Schedule_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Ticket Type Schedule Item</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Type Schedule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>